@@ -6,7 +6,7 @@ endif
 
 includedir = $(prefix)/include
 
-SUBDIRS = HepMC src fio test examples
+SUBDIRS = HepMC src fio doc test examples
 # list all subdirectories - for distribution and cleaning
 DIST_SUBDIRS = HepMC src fio doc test examples
 
