@@ -1,7 +1,9 @@
 
 2006-08-23 Lynn Garren
 
-	* example/Makefile.am: install examples in $(prefix)/examples/HepMC
+	* install examples in $(prefix)/examples/HepMC
+	
+	* check for latex and build documents if latex is present
 
 	--------------------  HepMC-02-00-00  ---------------------------------
 
